--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,16 @@
 body {
  margin: 0, 0;
+ padding: 0, 0;
  height: 100%;
 }
-
+.search {
+    padding: 10px;
+    margin: 10px;
+    width: 300px;
+    background-color:#f8f8ff;
+    border-radius: 7px;
+}
+mat-toolbar {
+    padding-right: 10%;
+    padding-left: 10%;
+}
