--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,21 @@
-head works!
+<p>
+    <mat-toolbar>
+    <div fxHide.gt-xs>
+        <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon" (click)="onToggleSidenav()">
+            <mat-icon>menu</mat-icon>
+        </button>
+    </div>
+    <span>EGDEV</span>
+    <span class="example-spacer"></span>
+    <div fxHide.xs>
+        <input placeholder="Search..." class='search'>
+    </div>
+    <div fxFlex fxLayout fxLayoutAlign="flex-end">
+        <button mat-icon-button fxHide.gt-xs class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
+            <mat-icon>search</mat-icon>
+        </button>
+        <button mat-button color="primary">login</button>
+        <button mat-raised-button color="primary">Create account</button>
+    </div>
+  </mat-toolbar>
+  </p>
