--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,3 +3,11 @@ body {
  height: 100%;
 }
 
+mat-sidenav-container, mat-sidenav-content, mat-sidenav {
+    height: 100%;
+  }
+  
+  mat-sidenav {
+    width: 300px;
+  }
+  
