--- a/src/app/sign-in/sign-in.component.css
+++ b/src/app/sign-in/sign-in.component.css
@@ -11,13 +11,19 @@
     align-content: center;
 }
 
-.testWiredEffect{
-    border: 1px solid 1px;
-    content: '';
-    display: block;
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    border-radius: 2px;
-}
 
+.signup-form {
+    width: 98%;
+  }
+  
+  mat-form-field {
+    width: 98%;
+  }
+
+  mat-checkbox {
+      align-self: flex-start;
+  }
+
+  .sign-in-form {
+      margin-bottom: 20px;
+  }
