--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -1,14 +1,13 @@
 <section class="new-training" fxLayout fxLayoutAlign="center">
-    <mat-card fxFlex.xs="100%" fxFlex="600px" >
-        <mat-card-title fxLayoutAlign="center center">EG developer best blog</mat-card-title>
-        <hr>
+    <mat-card fxFlex.xs="100%" fxFlex="600px" style="padding: 50px;" >
+        <mat-card-title fxLayoutAlign="center center" style="font-size: large;">EG developer best blog</mat-card-title>
         <div  fxLayoutAlign="center center"><span class="bluebold">EG Dev Community </span> is a community of 581,957 amazing developers </div>
                 <br>
                 <br>
                 <mat-card-content fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px">
-                    <button mat-raised-button style="width: 80%; padding: 0px 60px; background: #000000; color: white; text-align: center;">sign in with apple id</button>
-                    <button mat-raised-button  style="width: 80%; padding: 0px 60px; background: #24292E; color: white; text-align: center">sign in with Github</button>
-                    <button mat-raised-button style="width: 80%; padding: 0px 60px; background: #1DA1F2; color: white; text-align: center">sign in with apple twitter</button> 
+                    <button mat-raised-button style="width: 95%; padding: 10px 12px; background: #000000; color: white; text-align: center;">sign in with Apple id</button>
+                    <button mat-raised-button style="width: 95%; padding: 10px 12px; background: #24292E; color: white; text-align: center">sign in with Github</button>
+                    <button mat-raised-button style="width: 95%; padding: 10px 12px; background: #1DA1F2; color: white; text-align: center">sign in with Twitter</button> 
                     
                 </mat-card-content>
                 <mat-card-actions fxLayoutAlign="center" style="padding-bottom: 50px;">
