--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,12 +5,12 @@
 </div> -->
 <div class='body'>
     <app-nav-list  fxFlex="20"  fxHide.xs></app-nav-list>
-    <div fxFlex="60" fxFlex.xs="100%" >
+    <div fxFlex="50" fxFlex.xs="100%" style="margin: 20px;">
         <h1>Posts</h1>
         <mat-tab-group dynamicHeight  mat-align-tabs="end">
             <mat-tab label="Feed">
               <div class="example-small-box mat-elevation-z4">
-                Small content
+                <app-post></app-post>
               </div>
             </mat-tab>
             <mat-tab label="Week">
@@ -35,7 +35,7 @@
               </mat-tab>
           </mat-tab-group>
     </div>
-    <div fxFlex='20' fxHide.xs> 
+    <div fxFlex='20' fxLayout="column" fxHide.xs style="margin-right: 20px;"> 
     <h1>Stories</h1>
     <hr>
     <mat-list role="list" >
