--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
 </div> -->
 <div class='body'>
     <app-nav-list  fxFlex="20"  fxHide.xs></app-nav-list>
-    <div fxFlex="50" fxFlex.xs="100%" style="margin: 20px;">
+    <div class="no-mar" fxFlex="50" fxFlex.xs="100%">
         <h1>Posts</h1>
         <mat-tab-group dynamicHeight  mat-align-tabs="end">
             <mat-tab label="Feed">
@@ -38,9 +38,9 @@
     <div fxFlex='20' fxLayout="column" fxHide.xs style="margin-right: 20px;"> 
     <h1>Stories</h1>
     <hr>
-    <mat-list role="list" >
-        <mat-list-item role="listitem">SheCoded 2021 — Stories From Women Building Software and the Allies Supporting Them</mat-list-item>
-        <mat-list-item role="listitem">Nevertheless, she podcasted</mat-list-item>
-        <mat-list-item role="listitem">Happy International Women's Day to the Women Building Online Community 💖</mat-list-item>
-    </mat-list>
+    <ul >
+        <li role="listitem">SheCoded 2021 — Stories From Women Building Software and the Allies Supporting Them</li>
+        <li role="listitem">Nevertheless, she podcasted</li>
+        <li role="listitem">Happy International Women's Day to the Women Building Online Community 💖</li>
+    </ul>
 </div>
