--- a/src/app/post/post.component.html
+++ b/src/app/post/post.component.html
@@ -11,17 +11,17 @@
                 </div>
                 
                 <h1 style="font-weight: bolder;">A full comparison of 6 JS libraries for generating PDFs</h1>
-                    <ul role="list" fxLayout="row" style="align-self: flex-start;">
+                    <ul fxLayout="row" style="align-self: flex-start;">
                         <li role="listitem">#javaScript</li>
                         <li role="listitem">#node</li>
                         <li role="listitem">#typeScript</li>
                         <li role="listitem">#pdf</li>
                     </ul>
-                    <ul role="list" fxLayout="row" style="align-self: flex-start;">
+                    <ul  fxLayout="row" style="align-self: flex-start;">
                         <li role="listitem"><mat-icon> comment</mat-icon> comments</li>
                         <li role="listitem"><mat-icon>thumbs_up_down</mat-icon>  reactions</li>
                     </ul>
-                    <ul role="list" fxLayout="row" style="align-self: flex-end;">
+                    <ul fxLayout="row" style="align-self: flex-end;">
                         <li role="listitem"> 5 min read</li>
                         <mat-chip style="padding: 10px; border-radius: 25%;">Save</mat-chip>
                     </ul>
