--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -44,13 +44,18 @@ mat-nav-list {
     color: rgb(168, 168, 171);
 }
 
-mat-list-item {
-    margin-top: 20px;
+.no-mar { margin-top: 20px;}
+
+li {
     margin-bottom: 20px;
 }
-mat-list { 
-    display: flex;
-    flex-direction: column;
-    justify-items: center;
-    gap: 10px;
+
+ul {
+    list-style: none;
 }
+
+@media only screen and (max-width: 600px) {
+    .no-mar {
+      margin: 0;
+    }
+  }
