--- a/src/app/sign-up/sign-up.component.html
+++ b/src/app/sign-up/sign-up.component.html
@@ -5,11 +5,27 @@
                 <br>
                 <br>
                 <mat-card-content fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="15px">
-                    <button mat-raised-button style="width: 95%; padding: 10px 12px; background: #000000; color: white; text-align: center;">sign in with Apple id</button>
-                    <button mat-raised-button style="width: 95%; padding: 10px 12px; background: #24292E; color: white; text-align: center">sign in with Github</button>
-                    <button mat-raised-button style="width: 95%; padding: 10px 12px; background: #1DA1F2; color: white; text-align: center">sign in with Twitter</button> 
-                    
+                    <button mat-raised-button class="fa fa-apple" style="width: 95%; padding: 10px 12px; background: #000000; color: white; text-align: center;"><span class="space">Sign up with Apple ID</span></button>
+                    <button mat-raised-button class="fa fa-github" style="width: 95%; padding: 10px 12px; background: #24292E; color: white; text-align: center"><span class="space">Sign up with Github</span></button>
+                    <button mat-raised-button  class="fa fa-twitter"style="width: 95%; padding: 10px 12px; background: #1DA1F2; color: white; text-align: center"><span class="space">Sign up with Twitter </span></button>
                 </mat-card-content>
+                <section class="signup-form">
+                    <form fxLayout="column" fxLayoutAlign="center center" fxLayoutGap="10px" #f="ngForm" (ngSubmit)="onSubmit(f)">
+                      <mat-form-field>
+                        <input type="email" matInput placeholder="Your email" ngModel name="email" email required #emailInput="ngModel">
+                        <mat-error *ngIf="emailInput.hasError('required')">Field must not be empty.</mat-error>
+                        <mat-error *ngIf="!emailInput.hasError('required')">E-Mail is invalid.</mat-error>
+                      </mat-form-field>
+                      <mat-form-field hintLabel="Should be at least 6 characters long.">
+                        <input type="password" matInput placeholder="Your password" ngModel name="password" required minlength="6" #pwInput="ngModel">
+                        <mat-hint align="end">{{ pwInput.value?.length }} / 6</mat-hint>
+                        <mat-error>Has to be at least 6 characters long.</mat-error>
+                      </mat-form-field>
+                      <mat-checkbox ngModel name="agree" color="primary">Remember me</mat-checkbox>
+                      <button type="submit" mat-raised-button color="primary" [disabled]="f.invalid">Submit</button>
+                      <a [routerLink]="[ '/fpassword']">forget my password</a>
+                    </form>
+                  </section>
                 <mat-card-actions fxLayoutAlign="center" style="padding-bottom: 50px;">
                     <div >Already have an account? View more sign in options</div>
                   </mat-card-actions>
