--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
         <button mat-button color="primary" routerLink="signin" *ngIf="!userStatus">login</button>
         <button mat-button color="primary" routerLink="signin" *ngIf="userStatus" (click)="logout()">logout</button>
         <button mat-raised-button color="primary" routerLink="signup" *ngIf="!userStatus">Create account</button>
-        <button mat-raised-button color="primary" routerLink="signup" *ngIf="userStatus">Write Article</button>
+        <button mat-raised-button color="primary" routerLink="signup" *ngIf="userStatus" routerLink="wPost" >Write Article</button>
     </div>
   </mat-toolbar>
   </p>
